[tool.poetry]
name = "SAM_V2_Finetune"
version = "1.0.1
description = "Finetune for Meta's Segment Anything 2 "
readme = "README.md"
documentation = ""
repository = "https://github.com/Doronbh7/segment-anything-2-finetune"
authors = [
  "Doronbh7 https://github.com/Doronbh7",
    "AdiBH99 https://github.com/AdiBH99"
]
license = "LICENSE"
packages = [
    { include = "SAM_V2_Finetune" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
python-box = "^7.0.1"
pycocotools = "^2.0.6"
numpy = "^1.24.2"
opencv_python = "^4.7.0.72"
Pillow = "9.3.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
lightning = "^2.0.1"
segmentation-models-pytorch = "^0.3.2"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything-2.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "2.27.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core >= 1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "C", # Complexity (mccabe+) & comprehensions
    "UP", # pyupgrade
    "I", # isort
]
ignore = [
    "E402", # module level import not at top of file
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741", # Ambiguous variable name
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # unused import
    "F403",  # star imports
    ]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
